--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "classnames": "^2.5.1",
     "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
+    "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-bootstrap": "2.2.2",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.3.1",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.28.0",
