--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-csv": "^2.2.2",
     "react-dom": "^18.3.1",
     "react-paginate": "^8.2.0",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.6",
