--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,2 @@
-REACT_APP_BASE_URL = https://tiktok.fullstack.edu.vn/api/
-
-REACT_APP_BASE_URL_AUTHEN = https://localhost:7154/api
+PORT = 2999
+REACT_APP_BASE_URL_AUTHEN = https://www.apivideotiktok.somee.com
