--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.7",
     "bootstrap": "5.1.3",
     "classnames": "^2.5.1",
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
     "papaparse": "^5.4.1",
