--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-player": "^2.16.0",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
+    "react-sidebar": "^3.0.2",
     "react-toastify": "^10.0.6",
     "web-vitals": "^2.1.4"
   },
