--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "classnames": "^2.5.1",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
+    "mammoth": "^1.8.0",
     "normalize.css": "^8.0.1",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
