--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "axios": "^1.7.7",
     "bootstrap": "5.1.3",
     "classnames": "^2.5.1",
+    "gapi-script": "^1.2.0",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "mammoth": "^1.8.0",
     "normalize.css": "^8.0.1",
     "papaparse": "^5.4.1",
+    "peerjs": "^1.5.4",
     "react": "^18.3.1",
     "react-bootstrap": "2.2.2",
     "react-csv": "^2.2.2",
