--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 REACT_APP_BASE_URL_AUTHEN = https://apitiktok.zapto.org
-REACT_APP_BASE_URL_HUB = https://localhost:7173/chatHub
+REACT_APP_BASE_URL_HUB = http://apigooglemeet.somee.com/chatHub
 REACT_APP_MAX_FILE_SIZE = 1073741824
