--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 REACT_APP_BASE_URL_AUTHEN = https://apitiktok.zapto.org
-REACT_APP_BASE_URL_HUB = http://apigooglemeet.somee.com/chatHub
+# REACT_APP_BASE_URL_HUB = http://apigooglemeet.somee.com/chatHub
+REACT_APP_BASE_URL_HUB = http://apigooglemeetv2.somee.com/chatHub
+
 REACT_APP_MAX_FILE_SIZE = 1073741824
