--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "bootstrap": "5.1.3",
     "classnames": "^2.5.1",
     "gapi-script": "^1.2.0",
+    "jquery": "^3.7.1",
+    "jquery-ui-dist": "^1.13.3",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "mammoth": "^1.8.0",
